force-app/main/default/objects/Operation_Analysis_Report__c/Operation_Analysis_Report__c.object-meta.xml
<CustomObject>
    <description>Summarize the revenue of plan, actual revenue and last year actual by country and product line</description>
    <label>经营分析报表</label>
    <nameField>
        <label>Operation Analysis Report Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>