force-app/main/default/objects/Operation_Analysis_Report__c/fields/Planned_Completion_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Planned_Completion_Ratio__c</fullName>
    <formula>Actual_Revenue__c  /  Planned_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Completion Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>