force-app/main/default/objects/Operation_Analysis_Report__c/fields/Revenue_Same_Period__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Same_Period__c</fullName>
    <label>Revenue (Same Period)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>