force-app/main/default/objects/Operation_Analysis_Report__c/fields/Y_O_Y__c.field-meta.xml
<CustomField>
    <fullName>Y_O_Y__c</fullName>
    <formula>(  Actual_Revenue__c  /  Revenue_Same_Period__c  )  - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Y.O.Y</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>